# hack-n-slash-tool

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: data.rs  main.rs
